# e-footprint-interface

./: .env.local  pyproject.toml  requirements-dev.txt
scripts/: run_with_efootprint_branch.sh
