 # NOTE: you have to use single-quoted strings in TOML for regular expressions.
# It's the equivalent of r-strings in Python.  Multiline strings are treated as
# verbose regular expressions by Black.  Use [ ] to denote a significant space
# character.

[tool.poetry]
name = "efootprint-interface"
version = "0.14.5"
description = "Digital service environmental footprint model interface"
authors = ["Vincent Villet", "Clémence Knaébel", "Julien Houbart", "Jordane Frouin"]
readme = "README.md"
package-mode = false

[tool.black]
line-length = 120
target-version = ['py312']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | __pychache__
  | _build
  | buck-out
  | build
  | dist

  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
  | profiling
)/
'''

[tool.poetry.dependencies]
python = "^3.12"
efootprint = { path = ".vendor/e-footprint", develop = false }
django= "^5.0"
django-browser-reload = "^1.12.1"
django-environ = "^0"
psycopg2-binary = "^2.9"
django-bootstrap5 = "^24.3"
openpyxl = "^3"
gunicorn = "^23"
psutil = "^7"
redis = "^5.0"
orjson = "^3.11"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
pylint = "3.2.5"
flake8 = "^7.1.0"
pytest = '*'
pytest-cov = '*'
memory-profiler = "^0"
pytest-playwright = "^0.7.2"
pytest-django = "^4.11.1"
pytest-xdist = "^3.8.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# Django settings
DJANGO_SETTINGS_MODULE = "e_footprint_interface.settings"
# Playwright E2E settings - base URL for the Django server
base_url = "http://localhost:8000"
# Markers for test categorization
markers = [
    "e2e: End-to-end tests requiring browser",
    "slow: Tests that take longer to run",
]
